fix: Align Motive logo on all pages and login/register box

--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -26,7 +26,7 @@
   background-position: center;
 }
 
-.logoImagem1 {
+.logo-login {
   height: 64px;
   margin-left: 24px;
   margin-top: 5px;
@@ -38,16 +38,10 @@
 
 .botão-login {
   width: 260px;
+  height: 48px;
 }
 
 .campo {
   background-color: #303030;
   border-radius: 5px;
-}
-
-@media(min-width: 740px) {
-  .box-login {
-    height: 390px;
-    width: 330px;
-  }
 }
