--- a/src/pages/register/register.css
+++ b/src/pages/register/register.css
@@ -1,4 +1,4 @@
-.logoImagem {
+.logo-register {
   height: 64px;
   margin-left: 24px;
   margin-top: 5px;
